Update VOCUS 2022-05-06 patch

--- a/_posts/2022-05-05-VOCUS-怎麼用英文表達-我是認真的-不是玩假的.html
+++ b/_posts/2022-05-05-VOCUS-怎麼用英文表達-我是認真的-不是玩假的.html
@@ -8,15 +8,10 @@ tags: blog
 author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4928px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1473655762411-be043ade8591?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDI5MXx8c2VyaW91cyUyMGtpZHxlbnwwfHx8fDE2NTE2NzkwMTk&ixlib=rb-1.2.1&q=85" data-width="4928" data-height="3280" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1473655762411-be043ade8591"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">「I'm serious(認真的、嚴肅的)」、「I'm not just(只是) playing(在玩玩)」，你馬上想到的是這兩句對不對？如果我說還有另一種完全不同的表達方式，你會想到什麼？</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-cjvc5">not a throwaway moment</h2>
 <h2 class="draft-block draft--h2" name="header-cmdja">[nɑt ə ˈθroʊəˌweɪ ˈmoʊmənt]</h2>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">什麼是throwaway？</span></li>
 </ul>
@@ -26,41 +21,27 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <blockquote class="draft-block draft--blockquote">我作曲的目的，不是為了讓人聽完就拋諸腦後的。</blockquote>
 <div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">同樣邏輯，throwaway當作形容詞來使用時，意思是用完就丟的。它也可以用來形容孩子，throwaway children就是被父母拋棄的孩子們。</div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote">Use(使用) a throwaway razor(手動剃刀式刮鬍刀) if you want to save(節省) your budget(預算).</blockquote>
 <blockquote class="draft-block draft--blockquote">如果你要省預算的話，就使用隨用即丟(拋棄式)的手動刮鬍刀。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">什麼是a</span> <span style="font-weight: bold; ">throwaway moment(時刻、某一刻、某一瞬間)？什麼又是not(不是、非) a throwaway moment？</span></li>
 </ul>
 <div class="draft-block draft--p left">字面上，throwaway moment是可拋棄的、隨用即丟的某個時刻或某個瞬間。你想想，在你畢業時與同學拍學士照的那個瞬間，或是結婚時拍婚紗照的那個瞬間，那些時刻(moment)，或者那些時候拍下的照片，你覺得是可以隨意拋棄的(throwaway)或忽視、遺忘的嗎？想必不是那樣吧？所以那些都不是(not)可以隨意拋諸腦後或經歷過了就丟棄的時刻，這就是not a throwaway moment最原始的意境。</div>
 <div class="draft-block draft--p left">在拍學士照或婚紗照的那個當下，我們通常都是態度很真摯認真的，不是隨便拍好玩的，所以not a throwaway moment又延伸出「不是隨便搞的、不是玩假的」的意境，是指那種你會認真投入去做的時刻。</div>
 <div class="draft-block draft--p left">所以反之，a throwaway moment就是指那種你不會很認真看待、隨意糊弄過去也沒差的時刻，反正也不是玩真的。</div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote">The things(事情) I said(說) to you back at the restaurant(餐廳), like(好比說) "I'm really(真的) into(很著迷、很深陷入) you", was not just a throwaway moment.</blockquote>
 <blockquote class="draft-block draft--blockquote">我剛在餐廳對你說的那些，像是「我對你很著迷」這句話，那時我是說認真的，不是隨便亂講的。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">使用not a throwaway moment</span></li>
 </ul>
 <div class="draft-block draft--p left">就讓美國知名演員羅伯勞(Rob Lowe)來教我們吧。他上艾倫秀節目受訪時，被主持人艾倫問最美好的回憶是什麼時候，他這麼回答：</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/94962216-f0c5-4733-b757-ed0990db513f.gif" data-width="400" data-height="225" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自艾倫秀。製圖：譯難忘。</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/biz6uWABHww?t=103"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/94962216-f0c5-4733-b757-ed0990db513f.gif"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自艾倫秀。製圖：譯難忘。</figcaption></div>
+<iframe src="https://youtu.be/embed/biz6uWABHww" width="720px" height="360px"></iframe>
 <blockquote class="draft-block draft--blockquote">Rob Lowe: My favorite memory(回憶) is you and I kissing.</blockquote>
 <blockquote class="draft-block draft--blockquote">羅伯勞：我最喜歡的回憶是我們倆親吻的那一刻。</blockquote>
 <blockquote class="draft-block draft--blockquote">Ellen: Why did I kiss you?</blockquote>
 <blockquote class="draft-block draft--blockquote">艾倫：我為什麼要親你？</blockquote>
 <blockquote class="draft-block draft--blockquote">Rob Lowe: I was...I mean come on...right? My favorite is Ellen doesn't even remember it. Ellen is like "Why did I kiss you?" That wasn't a throwaway moment.</blockquote>
 <blockquote class="draft-block draft--blockquote">羅伯勞：我那時候......你們看嘛，我說的沒錯吧。我最愛的是艾倫根本不記得這件事。艾倫你還說「我幹嘛親你啊？」那一刻我不是玩假的欸。</blockquote>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">所以總結一下，throwaway可以用來形容用過就丟的、不必認真看待的事物，或是被父母拋棄的孩子。如果要表達態度是認真的，在前面加上否定詞not就好，例如不是隨便脫口而出的胡亂評論就是not a throwaway comment(評論)。這樣你就知道怎麼使用囉。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">編寫外語教學文章耗時費力，如果有幫助你拓展外文視野，如果你喜歡我作品，懇請訂閱並追蹤我的「擊破你的怪怪英日文」專題！所有生活好用的英日文都完整收錄在此專題中喔！ 🙏🙏🙏</div>
