--- a/_posts/2022-05-05-VOCUS-政治-愛與喜歡還有支持.html
+++ b/_posts/2022-05-05-VOCUS-政治-愛與喜歡還有支持.html
@@ -8,31 +8,23 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/ed06db98-b1ae-4ff9-b7d4-c69be46511e2.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ed06db98-b1ae-4ff9-b7d4-c69be46511e2.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-1n3us">俗話說的好，愛之深責之切。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">觀感</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">我喜歡並且喜愛就會支持這個人、事、物，不管是偶像明星或是政治人物，都離不開需要支持者的熱情擁簇，想要再螢幕前有好的形象不是件容易的事情，但我們卻不能因為我們的喜愛與支持無限的認同他的言行舉止還有失言，這事不對且愚昧的事件，不管任何事情都該建立在是非對錯上面的概念，來判斷與思考對與不對，事情總有個先後順序，喜愛在前錯誤在後的話就得看每個人的智慧。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">外遇</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">對婚姻不忠有些人就會認為對支持者與粉絲也會不忠，花心或是淫亂也是讓許多螢幕前的粉絲不買單的理由，但終究會有東山再起的機會回到大家的愛戴裡，只是需要時間去整理與格式化這些骯髒污穢的事情，想洗白說容易也不容易，困難的點在於你是否能夠再次住進支持者的心中並建立更好的形象與造型，這是跟時間賽跑的遊戲，持之以恆便會獲得勝利。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">愛情</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">在愛情裡依舊許多詐騙案例，我愛你一生一世就是最常聽到的謊言之一，通常都是處於熱戀期，很少有人可以真的履行這個誓言與約定，最後跟你在一起的老婆並不見得是你承諾的這位少女，也或許有更多的年輕女性也從你嘴巴得到了這些字句，但終究是無疾而終，結束在那些小細節的爭吵裡離去。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">誠信</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">跳票不僅僅是會出現在愛情與婚姻中，更多的是在政治人物的日常裡，雖然誠信是評估一個人的基準之一，但有時候會因為情愫的原因就會被加入消去的排程裡面，有些時候聽了千萬遍也等了多少年始終看不到答應的誓言實現，我想海枯石爛之時也不會有任何的東西來做結尾，不過因為喜愛遍都可以無所謂。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">是非</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">盲從跟無知是最可怕的東西，最容易招致毀滅，跟著跟著一不小心就成了冤魂飄盪人間，絕對的信任與相信造成的盲目是最危險的一員，因為你放心相信他說的一切，沒有是否對錯當作基準點就好可能會被擺在最危險的那邊，更可能轉入麻煩的漩渦裡面，得不償失的終究是選擇相信的機會，損失只能自己認賠，討不到求償的瞬間，吃虧。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">我想知道你不會後悔，在做完每個決定之後都會有連鎖反應回到你的身邊，這也是自食惡果的由來與經典，但我想在這縝密的各條未來線之中，肯定會有平凡的自己沒有太多的超過人體極限，但既然我選擇支持便不會中途不繼續守護該保護的明天，太多的人需要支持與支援，但仔細挑選卻是重點經驗，遇人不淑不管是愛情或政治人物選舉都是很大的考驗，但要讓自己的智慧凌駕於一切讓自己的仰光看清，誰才是真的能讓自己尊敬且喜愛的對象支持到底，如題。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
