--- a/_posts/2022-05-05-VOCUS-政治-軟性共產.html
+++ b/_posts/2022-05-05-VOCUS-政治-軟性共產.html
@@ -8,29 +8,20 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/ea426646-00e9-4cab-b75e-9b3fa7410d36.jpg" data-width="1280" data-height="853" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay </figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ea426646-00e9-4cab-b75e-9b3fa7410d36.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / pixabay </figcaption></div>
 <h3 class="draft-block draft--h3" name="header-1kmvr">類共產其實就等於類民主，看似有選擇其實沒有選擇。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">難道你要投國民黨嗎 ?</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">這句台詞存在了很久，直到現在還是很多人朗朗上口，但現實的確是這樣，難道你要投國民黨讓他們賣台嗎，然而賣台的定義大家又自我解讀，如果圖利特定國家才是賣台，那引進福食就有進入國際組織嗎，這樣的議題不也被消失匿跡，引進萊豬有增加國際地位嗎，沒有，這議題也都銷聲匿跡，為甚麼，因為他們目的達到了就沒什麼好提的了，這就是軟性的共產，不見得是用強硬的方式來達到目的，而是用更加淺移默化的引導讓你們成為心甘情願的追隨者。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">比較</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">近來社會風氣傾向不是國民黨就好的邏輯，但這不該是正常的邏輯，應該要更家進步與精進，而不是說著別人很爛相比之下其實我好像還是可以，可以甚麼，黨內可以有黑道、有覺青、有毒梟、甚至有人炒地皮還有國家標案都能夠伸手進去，以前常常聽說國民黨黑金如何卑鄙，如今民進黨好像也沒有真的好到哪裡去，再多的偽裝都只是讓人民更加甦醒，綠能你不能已經成為炙手可熱的日常用語，諷刺著這最民主的台灣政黨只有唯一。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">民意               </span>      </blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">在以前民意大於天，以前的公民課都有說，政府需要傾聽民心，如果胡作非為或肆意妄為便會被民意所唾棄遠離，因為選票都握在人民手中時時刻刻都在監督政府的行逕，但現在變得黨政不分，總統貴為國家最高領導人還兼任黨主席，更糟糕的是立法院還是過半席次在裡面執行，監察院其實不用說根本形同廢立，在這種狀況下難怪網友會戲稱「英皇降臨」，因為就實際狀況來說他現在無所不能，推行甚麼都蕙百分之掰的通過並且確立，甚麼公聽會、聽證會都只是過過水而已，因為他們的席次早已經可以無視別的政黨的對立，現在的台灣已經失去視力平航廈的監督與執行，這正是軟性獨裁的證明與證據。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left">           </div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">官員        </span>     </blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">謙卑的時代早已過去，如同行政院長說的「官員被人當狗罵的時代已經過去 」，但身為人民的公僕面對被人民賦予質詢監督權的民意代表質疑本質上沒有甚麼問題，只是官員的傲慢已經到了徹底，看看柯文哲被質詢除了幾次生氣外，其他也都是好好溝通處理，也沒有因為是台北市長便高高在上不屑回答或是態度敷衍，有些官員倒是會趾高氣昂的反質詢，立委時常被行政院院長弄得啞口無言，先不論立委的素質如何或是質詢的問題點，但對於這種反客為主的概念我實在也覺得不是那樣的正確，畢竟質詢不是辯詰更不是律師那樣在法院爭鋒相對，只需回答問題即可，實在不用繞一大圈模糊焦點，然後結束也不會正面回答問題，這樣的方式實在是時常出現在質詢時的影片，讓人民也覺得無言。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left">                                                          </div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">各個電視台放送的都是好消息或是消逝過的劇情，有多少的民意還會被真實的展現出來讓大家去參考選擇支持或反對，當第二種聲音消失不見，大多數的人已經變成了魁儡，那民主的自由度又有多少成分是用隱埋堆積出來的虛偽，我想大家要好好思考這樣的論點，別讓自己不明不白地生活在這個空間。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
