--- a/_posts/2022-05-06-INMEDIA-立法會檢討童樂居-林智遠稱育兒時-想兜把星-但須忍手.html
+++ b/_posts/2022-05-06-INMEDIA-立法會檢討童樂居-林智遠稱育兒時-想兜把星-但須忍手.html
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p>社福界的新思維狄志遠則溫馨提醒政府，盡快將保護兒童的法例交上立法會，相信立法會會盡快通過。羅致光表示，立法將觸及「強制舉報」的層面，涉及很多技術細節，例如要改專業守則，亦涉及行業訓練，要諮詢業界；他稱若推行太急，反而擔心有人為求自保，大量舉報他人，羅致光強調不要「好心做壞事」。</p>
 <p>羅致光又稱，整體撥款檢討包括提醒機構要善用撥款，他舉例某些機構年年用不完資助，將撥款交還政府，「政府想唔想拎返啲錢？我哋係唔想」，他強調機構有額外資源，就應該提升服務。他續指，流失率問題可以在盈餘反映，「佢畀嘅薪酬唔夠，啲人自然流動得快，請新人人工又低啲，個盈餘又特別高啲」，將來政府會特別關注機構盈餘問題。</p>
 <p><strong>管浩鳴：邊有家庭一對八 四個都搞唔掂</strong></p>
-<p>多名議員關心亦人手比例問題。其中陳家佩指自己有兩個小孩，「如果要我一對二呢，我一日都好辛苦，何況一對六甚至一對八」。管浩鳴亦關注兒童家宿一對八的人手比例，質疑「邊有家庭一對八，四個都搞唔掂」。</p>
+<p>多名議員關心亦人手比例問題。其中陳家珮指自己有兩個小孩，「如果要我一對二呢，我一日都好辛苦，何況一對六甚至一對八」。管浩鳴亦關注兒童家宿一對八的人手比例，質疑「邊有家庭一對八，四個都搞唔掂」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/photos/inmediahk/52053633908/in/album-72177720298678297/" title="無標題"><img src="https://live.staticflickr.com/65535/52053633908_a0bc7173ae_z.jpg" width="640" alt="無標題" /></a><br /><em>選委會界林智遠</em></p>
 <p>選委會界林智遠亦加入分享「湊仔經」，他表示自己沒有小朋友，但母親有替人湊仔：「（小朋友）仲要過夜，有陣時真係想兜把星佢。」他緊握拳頭續指，「但呢樣嘢一定要忍住，同要有個心出嚟囉」，本身是會計師的林智遠稱這叫「Control environment（控制環境）」，又指員工間要互相制衡。羅致光回應指，「童樂居」事件是員工間大規模出現虐兒行為，連互相制衡都崩潰。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
