--- a/_posts/2022-05-06-INMEDIA-軍裝警公園擺pose打卡-警方解畫為刊物-警聲-拍照.html
+++ b/_posts/2022-05-06-INMEDIA-軍裝警公園擺pose打卡-警方解畫為刊物-警聲-拍照.html
@@ -9,6 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/116_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 網上流傳一段片段，一名軍裝警於執勤期間在公園雙手插腰狀甚威風「擺pose」，並由另一名軍裝警舉機拍照。片段惹來討論，思疑何以行咇值得拍照紀念。警方晚上在Facebook解畫，指片中兩警在一宗尋人案中立功，「在不影響其緊急工作的情況下，回到事發現場拍攝照片」，並計劃在將事績在下一期警隊刊物《警聲》中刊登。</p>
-<p>警方晚上在Facebook，以「正輔合一服務市民 ， 警隊感謝市民讚賞」為題貼文，指片中分別為一名正規警員和一名輔警，他們於今年3月9日在上環處理一宗「高危失蹤人士」案件時盡忠職守，表現專業，協助事主在一小時內尋回七旬患病的父親，事後獲市民來信讚揚。警察公共關係科遂邀請他們，在不影響其緊急工作的情況下，回到事發現場拍攝照片。警隊計劃將照片，連同市民的嘉許信，一併在5月18日出版的新一期《警聲》中刊登。警方稱感謝市民對警務人員的支持和鼓勵。</p>
+<p>警方晚上在Facebook，以「正輔合一服務市民 ， 警隊感謝市民讚賞」為題貼文，指片中分別為一名正規警員和一名輔警，他們於今年3月9日在上環處理一宗「高危失蹤人士」案件時盡忠職守，表現專業，協助事主在一小時內尋回七旬患病的父親，事後獲市民來信讚揚。</p>
+<p>警察公共關係科遂邀請他們，在不影響其緊急工作的情況下，回到事發現場拍攝照片。警隊計劃將照片，連同市民的嘉許信，一併在5月18日出版的新一期《警聲》中刊登。警方稱感謝市民對警務人員的支持和鼓勵。</p>
 <p>整條影片長13秒，兩名軍裝警員在公園「擺pose」打卡，期間有送貨工人路過，凝視兩人行為，兩警仍然繼續拍照。</p>
 </div></div></div>
