--- a/_posts/2022-05-06-INMEDIA-張潔平台北開飛地書店-將養育她的香港精神-活出來.html
+++ b/_posts/2022-05-06-INMEDIA-張潔平台北開飛地書店-將養育她的香港精神-活出來.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/119_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 創辦端傳媒、Matters的著名傳媒人張潔平、聯同香港學者梁啟智，在台北市開「飛地」書店，4月23日正式開業，台灣作家胡晴舫、馬華作家林韋地、香港作家陳慧和鄧小樺等都有到訪。張潔平形容，開業以來市民反應熱烈，遠遠超出預期，讓她感受到香港社群在台灣的潛在力量。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20_10.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>創辦端傳媒、Matters的著名傳媒人張潔平、聯同香港學者梁啟智，在台北市開「飛地」書店，4月23日正式開業，台灣作家胡晴舫、馬華作家林韋地、香港作家陳慧和鄧小樺等都有到訪。張潔平形容，開業以來市民反應熱烈，遠遠超出預期，讓她感受到香港社群在台灣的潛在力量。</p>
 <p>書店的名字也是與香港有關。張認為，香港在過去近百年的意義就是一塊「飛地」，在文化及政治上包容不同看法、海納百川。她認為，近年政治環境急劇轉變，香港擁有的特性漸漸消亡；同時促使她覺得不安，認為居住在香港不再那麼理所當然。</p>
 <p>目前，她因為工作關係住在台灣。她希望透過飛地書店，將香港精神散播：「它養育過我，我想把它活出來。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/xC0h99" title="nowhere"><img src="https://live.staticflickr.com/65535/52050960632_3da9064fa9.jpg" width="500" alt="nowhere" /></a></p>
