--- a/_posts/2022-05-06-PQ-抹去梅克爾友善中俄的烙印-蕭茲專程訪日的3個打算.html
+++ b/_posts/2022-05-06-PQ-抹去梅克爾友善中俄的烙印-蕭茲專程訪日的3個打算.html
@@ -20,7 +20,7 @@ author: 陳怡菱
 
 
 
-<p>2021 年 12 月成立的蕭茲政府是由中間偏左的社會民主黨（SPD）、提倡環境保護的綠黨（GRÜNE）以及中間的自由民主黨（FPD）所組成。社會民主黨的蕭茲會不會向重視人權、對中採強硬立場的綠黨靠近適當時候受到矚目的焦點。</p>
+<p>2021 年 12 月成立的蕭茲政府是由中間偏左的社會民主黨（SPD）、提倡環境保護的綠黨（GRÜNE）以及中間的自由民主黨（FPD）所組成。社會民主黨的蕭茲會不會向重視人權、對中採強硬立場的綠黨靠攏是當時候受到矚目的焦點。</p>
 
 
 
