--- a/_posts/2022-05-06-PQ-台日關係強化中-外交部感謝日本首相公開發言重視台海穩定.html
+++ b/_posts/2022-05-06-PQ-台日關係強化中-外交部感謝日本首相公開發言重視台海穩定.html
@@ -28,7 +28,7 @@ author: Salima
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277.jpg" alt="" class="wp-image-100405" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277-300x217.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277-768x557.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本自民黨青年局訪團6日上午在台北大倉久和飯店舉行媒體見面會，因有訪團成員確診，由眾議員鈴木憲和（左）、鈴木隼人（右）代表出席，圖為兩人會後比讚合影。圖／中央社</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277.jpg" alt="" class="wp-image-100405" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277-300x217.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/5baf1489-1060x768_623327651277-768x557.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>日本自民黨青年局訪團6日上午在台北大倉久和飯店舉行媒體見面會，因有訪團成員確診，由眾議員鈴木憲和（左）、鈴木隼人（右）代表出席，圖為兩人會後比讚合影。圖／中央社</figcaption></figure>
 
 
 
