Update VOCUS 2022-05-08 patch

--- a/_posts/2022-05-07-VOCUS-writing吃喝-嘴饞都會想吃的-洋芋片-第二彈.html
+++ b/_posts/2022-05-07-VOCUS-writing吃喝-嘴饞都會想吃的-洋芋片-第二彈.html
@@ -8,17 +8,14 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/49d5bca8-f854-4244-8677-550a6a558b6f.jpg" data-width="1080" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/49d5bca8-f854-4244-8677-550a6a558b6f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">這次的洋芋片依然是自己愛吃的幾款，推出第二彈系列分享給大家！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">🥔第一個是湖池屋的<span style="font-weight: bold; ">「極品岩鹽」</span>口味，特殊的平切加厚切法，整個薯片吃起來有別於一般的口感，有更紮實的咬嚼和岩鹽提味，並不會非常鹹，可以吃得出來天然食材本身的美味和特色，屬於厚片型，我個人非常喜歡，吃了一次之後就愛上，後面又回頭買了數包回家慢慢嗑。</div>
 <div class="draft-block draft--p left">🥔第二個是樂事推出的<span style="font-weight: bold; ">「岩燒海苔」</span>口味洋芋片，有著低溫岩燒的海苔細粉，可以吃得到海苔的鹹香甜，味覺稍重的人可以品嚐，一定會喜歡。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2337px" class="image-block-prerender" data-src="https://images.vocus.cc/cfb2e9d1-d188-4f80-8328-e79e4b8c34b4.jpg" data-width="2337" data-height="1761" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/cfb2e9d1-d188-4f80-8328-e79e4b8c34b4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">🥔第三個是<span style="font-weight: bold; ">「湖池屋海苔塩」</span>，是我幾乎必買來吃的洋芋片之一，裡面有著濃郁的青海苔及燒海苔，加上鹹而不膩的天然鹽調味，吃起來酥脆帶勁，沒有非常死鹹而是剛剛好的口感，我常常在忙碌過後放鬆時，就會想開來吃一包😋</div>
 <div class="draft-block draft--p left">🥔第四個是湖池屋推出的<span style="font-weight: bold; ">「咔辣姆久勁辣唐辛子」</span>口味洋芋片，這款也是我必買洋芋片之一，因為他的香辛料和辣椒粉真的太棒了，辣度並非死辣，而是剛剛好的程度（我也沒辦法吃太辣的產品），口感層次吃起來很豐富，可能是他獨特的辛辣風味，所以吃起來很過癮，是這四款當中口味最重的一款，也是我看影片的最佳零嘴😆</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2631px" class="image-block-prerender" data-src="https://images.vocus.cc/ff3707a9-5ff0-4f11-ae12-4e5352f1206f.jpg" data-width="2631" data-height="1800" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ff3707a9-5ff0-4f11-ae12-4e5352f1206f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">❓哪裡買？</div>
 <div class="draft-block draft--p left">在各大賣場和超商均有販售。</div>
 <div class="draft-block draft--p left">——————————</div>
@@ -33,6 +30,5 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">另外我已經開設YouTube頻道，會陸續放上影片，未來也會利用YouTube平台介紹更多吃喝玩樂有趣的事物喔～</span></div>
 <div class="draft-block draft--p left"><a href="https://youtube.com/channel/UCRMwJwQHmQYEn8R8FlWiXfA" target="_blank" class="draft--a">Writing生活玩家頻道</a></div>
 <div class="draft-block draft--p left">歡迎大家鑑賞😆 <span style="font-weight: bold; ">記得幫我按讚加追蹤～謝謝各位的支持～</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1032px" class="image-block-prerender" data-src="https://images.vocus.cc/d7acf980-d1a1-4400-bfcb-ff0cd2369a29.jpg" data-width="1032" data-height="954" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:538px" class="image-block-prerender" data-src="https://images.vocus.cc/a2394c01-13d6-40bc-befb-8515df569da7.jpg" data-width="538" data-height="498" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d7acf980-d1a1-4400-bfcb-ff0cd2369a29.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a2394c01-13d6-40bc-befb-8515df569da7.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
