--- a/_posts/2022-05-07-VOCUS-母親-女王之上.html
+++ b/_posts/2022-05-07-VOCUS-母親-女王之上.html
@@ -9,21 +9,21 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
 <h3 class="draft-block draft--h3" name="header-9m8ip">「一盎司的『母親』抵過一噸的『牧師』。」，西班牙諺語。</h3>
-<div class="draft--imgNormal draft-block"><div><div style="height:570px" class="image-block-prerender" data-src="https://images.vocus.cc/e0a648ae-56bb-4059-9749-202d91f05690.jpg" data-width="570" data-height="403" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網路圖片分享</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/e0a648ae-56bb-4059-9749-202d91f05690.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">網路圖片分享</figcaption></div>
 <div class="draft-block draft--p left">這個星期日（5月8日），是西元2022年的母親節，雖然台灣正逢「遲來」的肺炎海嘯衝擊，確診數目每天持續往上飆升，但在此感恩的時刻，我依然以最誠摯的心情，向阿祖、阿嬤、媽媽、第一年當媽媽，以及準備當媽媽，或是稱職扮演著媽媽角色的每一位「母親」們，提前說聲<span style="font-weight: bold; ">「母親節快樂，您辛苦了！」</span></div>
 <div class="draft-block draft--p left">無論是稱呼媽、家慈、娘親、阿母或額娘，乃至於是「ino」（鄒語）、「yaya」（泰雅語），當眾人興高采烈地準備外帶佳餚或是親手下廚，讓母親好好打打牙祭的同時、也可能是線上採購各式精美禮品之際，各位好友們有沒有想過，為什麼我們的父親節是訂定在固定日期的「8月8日」，可是母親節卻被訂在</div>
 <h2 class="draft-block draft--h2" name="header-arbp7">「五月份的第二個星期日」呢？</h2>
 <div class="draft-block draft--p left">好的，我（人醜）沒辦法開YT直播，但接下來的幾分鐘呢，倒是邀請大家跟我一同搭乘「時光機」，回到過去那個還沒有肺炎威脅的美好時代……</div>
 <div class="draft-block draft--p left">喂！是那個還沒有「慶祝」母親節的時候啦！</div>
 <div class="draft-block draft--p left">話說在西元十九世紀末，位於美國西維吉尼亞州（West Virginia）的「安得魯衛理教會」（Andrews Methodist Episcopal Church），有一位主日學老師，名字叫做安．賈薇絲（Ann Maria Reeves Jarvis，1832－1905），她的父親是教會的牧者，自己則服事於各種團契事工；</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/80a4bcae-a063-4a73-9934-af44d04fc951.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/80a4bcae-a063-4a73-9934-af44d04fc951.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">安女士在課堂上除了敬虔教授《聖經》的話語和耶穌基督的教誨之外，也奔走於社會弱勢族群的關懷與陪伴，更多次在閒暇之餘，和全體主日學學生分享一則信息：那就是希望有朝一日，她能夠親眼看見一個<span style="font-weight: bold; ">「專門被用來紀念世上所有母親的日子」</span>，一個作為紀念每一位媽媽們長年不辭辛勞、甘心付出、犧牲自己的日子，也得以向那些默默無名，曾經為家庭、為國家鞠躬盡瘁的奉獻者、安慰者獻上最崇高的謝意與致敬。</div>
 <div class="draft-block draft--p left">誠如《舊約以賽亞書》第66章第13節所記載的：<span style="font-weight: bold; ">「母親怎樣安慰兒子，我就照樣安慰你們…」</span>，安女士的女兒，安娜．賈薇絲女士（Anna Marie Jarvis，1864－1948），從小也將母親的盼望一直放在心底深處…</div>
 <div class="draft-block draft--p left">回顧當時的美洲新大陸，美國本土正歷經西元十九世紀中葉「南北戰爭」結束之後，普世人權與自由主義議題的興起，女性亦開始走出家門，逐漸活躍於社會改革活動的行列，期間最重要的大事記，莫過於是<span style="font-weight: bold; ">女性爭取公民權與參政權，並呼籲國會兩院修訂《美國憲法》各項條文的請願運動！</span></div>
 <div class="draft-block draft--p left">安娜女士在主張開明、進步的環境下成長，但她未曾離鄉背井，反而選擇留在故鄉西維吉尼亞州教書，更決志終生未婚，就近照顧母親安與失明的姊姊愛爾西諾（Elsinore）；繁忙、瑣碎的教職人生，她也不忘積極參加推廣禁酒令、開放女性參政權等活動。當然，教會內的各種服事，讀經、禱告的信仰生活，安娜女士也始終不曾缺席。</div>
 <div class="draft-block draft--p left">西元1905年的5月9日，安女士了卻肉身的苦痛與束縛，因心臟疾病安息主懷，返回天家。</div>
 <div class="draft-block draft--p left">兩年之後，經過了一段被教會學校依不符規定而婉拒的信心考驗下，西元1907年的5月12日，安娜女士不畏困難，終於說服安得魯衛理教會，<span style="font-weight: bold; ">在母親辭世滿兩週年時，也剛好是「五月的第二個星期日」，委請教會為安女士進行了一場簡單的紀念追思禮拜……</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/fa28c20d-3b5c-463c-98d6-c53f62ec7ae7.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/fa28c20d-3b5c-463c-98d6-c53f62ec7ae7.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">「才德的婦人誰能得著呢？她的價值遠勝過珍珠！」，《舊約箴言》第31章第10節。</pre></pre>
 <div class="draft-block draft--p left">在聖歌吟詠的溫馨禮拜中，眾人以安女士生前最喜愛的白色康乃馨來佈置會堂，用以象徵著母愛的甜美、純潔與永恆。隔年，也就是西元1908年5月10日，同樣是五月的第二個星期日，安得魯衛理教會舉行了另一場更為隆重肅穆的正式追思禮拜，再次緬懷大家所尊敬的主日學老師安女士；至於在<span style="font-weight: bold; ">美國費城，透過各基督教會團契間的連結、奔走與提倡，許多當地教會也選在這一天進行了史上第一場的母親節感謝禮拜。</span></div>
 <div class="draft-block draft--p left">自此之後，安娜女士與教會內的有志姐妹們，如同老鷹展開信心的翅膀，推動了一連串的全國投書運動，期許透過一封封親筆書信，能取得具社會影響力之美國政商權威人士的支持，進而加速國會正式立法，訂定出一個全國性紀念母親的重要節日！</div>
@@ -35,10 +35,10 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">雖然面臨阻礙跟雜音，相對的，也有支持與鼓勵，西元1910年時，安娜所居住的西維吉尼亞州，州政府允諾宣佈：母親節將成為一個新的州立公定假日，而奧克拉荷馬州亦在同年開始慶祝母親節。<span style="font-weight: bold; ">到了西元1911年，美國境內不分教派與州別，幾乎都各自在五月第二個禮拜日舉辦母親節的相關紀念活動</span>…而在世界各地，諸如墨西哥、加拿大、日本、南美，甚至是非洲等國，透過了新聞媒體的宣傳跟介紹，也陸續開始有了母親節的專屬慶祝儀式。</div>
 <div class="draft-block draft--p left">西元1913年5月，距離第一個母親節禮拜六個寒暑之後，美國眾議院通過決議，要求美國總統率其內閣及所有政府官員，在母親節慶祝活動的典禮上一律佩戴白色康乃馨；<span style="font-weight: bold; ">隔年的5月8日，美國國會正式通過附議案，指定「五月的第二個星期日」為美國國定的母親節！</span></div>
 <div class="draft-block draft--p left">安娜女士，此時此刻，終於替敬愛的母親一圓人生最大的盼望！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/d263ec3e-7b60-48e9-a1b9-fcc91f8fa646.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/d263ec3e-7b60-48e9-a1b9-fcc91f8fa646.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h2 class="draft-block draft--h2" name="header-5qnqm">「『媽媽』，在女王之上的頭銜。」</h2>
 <div class="draft-block draft--p left">想想，新冠肺炎替人類帶來的「天翻地覆」已經三年了，很多人從一開始的惶恐、擔憂，慢慢演變成今日的無奈或茫然，根據世界衛生組織（WHO）最新發布的數據報告，過去兩年（西元2020、2021年），疫情已直接或間接導致全球約1,490萬人死亡，由於WHO本次特別將因疫情所造成的醫療系統癱瘓，或者是受社區感染影響而間接致死的案例一併列入計算，故此次公布的數據值要比過去通報的死亡病例數整整多出了950萬人之多！美國疾病管制暨預防中心（CDC）甚至指出，全美已經有近六成的大人，以及四分之三的孩童曾經染疫……</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://assets.matters.news/embed/65206d6a-1ca2-46ed-b8db-4c05b1ba9048.jpeg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://assets.matters.news/embed/65206d6a-1ca2-46ed-b8db-4c05b1ba9048.jpeg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">或許吧，我們不知道肺炎疫情的出口或盡頭在哪裡？而看似永無歇息，變種病毒的連番進化，也可能會用光了所有的希臘字母。<span style="font-weight: bold; ">在未來的某一天、某一個時點上，吾人更可大膽假設，群體免疫的背後，會是無形病毒悄悄地讓全體人類都成為「陽性」或「類陽性」感染者</span>，從此之後，我們所有的倖存者將自動進化（？）成與上一代「人類」不同的「新人類」…</div>
 <div class="draft-block draft--p left">但就算真的有這麼一天的到來，十年之後、五十年之後，甚至是一百年之後，<span style="font-weight: bold; ">人類每當遇到棘手的麻煩事，第一個想到可以解決的人，</span></div>
 <h2 class="draft-block draft--h2" name="header-9hid3">媽媽！</h2>
@@ -59,7 +59,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">蒙古的<span style="font-weight: bold; ">母親節與「國際兒童節」同一天，6月1日。</span></div>
 <div class="draft-block draft--p left">盧森堡，是六月第二個星期日。</div>
 <div class="draft-block draft--p left">剛獨立不久的南蘇丹，是七月的第一個星期一。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:536px" class="image-block-prerender" data-src="https://images.vocus.cc/21860945-b6e4-4801-be64-bb8976828153.jpg" data-width="536" data-height="799" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/21860945-b6e4-4801-be64-bb8976828153.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">8月15日，是哥斯大黎加的<span style="font-weight: bold; ">母親節，亦是羅馬天主教的「聖母升天日」（Assumption of Mary into Heaven）。</span></div>
 <div class="draft-block draft--p left">原本採「國際婦女節」慶祝的白俄羅斯，自西元1996年以降，母親節訂定為10月14日。</div>
 <div class="draft-block draft--p left">非洲的馬拉威，是<span style="font-weight: bold; ">10月15日或者是接續的工作日，為慶祝聯合國的「世界農村婦女日」</span>。</div>
