--- a/_posts/2022-05-07-VOCUS-為什麼要學歷史-人永遠無法從歷史汲取教訓嗎.html
+++ b/_posts/2022-05-07-VOCUS-為什麼要學歷史-人永遠無法從歷史汲取教訓嗎.html
@@ -8,7 +8,7 @@ tags: blog
 author: Kuan
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:3024px" class="image-block-prerender" data-src="https://images.vocus.cc/184be7ae-6119-4aa8-aa84-9cad350d2391.jpg" data-width="3024" data-height="4032" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《為什麼要學歷史》</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/184be7ae-6119-4aa8-aa84-9cad350d2391.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">《為什麼要學歷史》</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-ffvlu">遺忘歷史的代價</h2>
 <div class="draft-block draft--p left">上週，在唐山書店遇見這本書，封面上的提問立刻引起我的好奇：<span style="font-weight: bold; ">「為什麼要學歷史？」</span></div>
 <div class="draft-block draft--p left">是啊，相較於其他書籍教你累積財富、職涯起飛或療癒心靈，學習歷史似乎無法為當下的你帶來任何效用、CP 值很低，但歷史卻不曾在通識或博雅教育的課表中缺席，那麼，學習歷史的價值究竟是什麼呢？</div>
@@ -20,13 +20,12 @@ author: Kuan
 <h2 class="draft-block draft--h2" name="header-8f6aa">歷史的回音</h2>
 <div class="draft-block draft--p left">「以史為鑒」雖然已是大家熟知的陳腔濫調，但對於繁忙的現代人而言，要閱讀、萃取並記憶歷史，得花上不少時間。</div>
 <div class="draft-block draft--p left">然而，我們需要汲取前人的經驗，提醒我們<span style="font-weight: bold; ">哪些思想是來自過去的危險幽靈，曾經蹂躪他們的世界，至今仍在現代作祟</span>，只是隨著科技與制度的不同，這些幽靈有了新的宿主、新的解釋，以及<span style="font-weight: bold; ">新的代言人</span>。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/3809b781-1645-4dcc-a737-e47f3e45e241.jpg" data-width="1200" data-height="675" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2022 年 2 月 21 日，普丁發表對烏事件談話</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3809b781-1645-4dcc-a737-e47f3e45e241.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2022 年 2 月 21 日，普丁發表對烏事件談話</figcaption></div>
 <div class="draft-block draft--p left">只要我們細細探究，便能找到藏匿在當代事件下的歷史痕跡，比方說：上個月普丁發表對烏克蘭軍事行動的演說時，說道：</div>
 <blockquote class="draft-block draft--blockquote">「自古以來，居住在曾是俄羅斯西南部領土（指烏克蘭）的人，都會認為自己是俄羅斯人。」</blockquote>
 <div class="draft-block draft--p left">（2014 年克里米亞危機時，他也說過差不多的話）</div>
 <div class="draft-block draft--p left">或是習近平在《告台灣同胞書》發表40周年紀念會上說：</div>
 <blockquote class="draft-block draft--blockquote">「把解決臺灣問題、實現祖國完全統一作為矢志不渝的歷史任務。」</blockquote>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">若我們將視線轉向一百多年前的歐洲，便會發現上面那兩個人的演說，不過就是<span style="font-weight: bold; ">歷史的回音</span>而已。</div>
 <div class="draft-block draft--p left">1871 年普法戰爭結束後，德國要求法國割讓<span style="font-weight: bold; ">亞爾薩斯</span>與<span style="font-weight: bold; ">洛林</span>兩個地方（同樣是「歷史上的」德意志領土），德國民族主義者海因里希．馮．特賴里克曾說：</div>
 <blockquote class="draft-block draft--blockquote">「這些省份 ⋯⋯ 我們擁有更高的權利統治他們，我們憑藉<span style="font-weight: bold; ">德意志民族的權利</span>統治他們，以防止德意志帝國與她走失的孩子變得疏遠。」</blockquote>
@@ -42,5 +41,3 @@ author: Kuan
 <div class="draft-block draft--p left">（書裡用了很多祈使句跟驚嘆號，讓作者在我腦中的形象變成一個總是大聲嚷嚷的老教授 XD）</div>
 <div class="draft-block draft--p left">最後，我想起最近看的一部紀錄片——BBC 的<a href="https://www.bbc.co.uk/iplayer/episode/m00084tb/rise-of-the-nazis-origins-1-politics?seriesId=m00084tc" target="_blank" class="draft--a">《納粹的崛起》</a>（Rise of the nazis），內容是納粹黨從一個邊緣政黨到摧毀民主體制、全權掌控德國的過程，影片結尾的一段話，非常適合作為這本書的註腳：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">「納粹的崛起並不是無法阻止的，過程中有許多危險的跡象，但在當時，人們對於民主這種新體制很陌生，人們不知道民主是非常、非常脆弱的，民主無時無刻都需要有人捍衛。<br><br>這也是為什麼這個故事值得被一再講述，因為這是一個警告世人『別將民主視為理所當然』的故事，為保存它，人們必定得大力反抗極權。」</div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
